@@ -45,6 +45,7 @@ Done
     b. allow users to increase/decrease quantities of items in cart
         b1. including removal
     c. no need for checkout/payment system
+        c1. for "checkout" button, use poppo gif in pop up module?
 Wip
 
 7. fetch items using api
