@@ -4,14 +4,22 @@ import { useOutletContext } from "react-router";
 
 const Cart = () => {
     const { cartArray, setCartArray } = useOutletContext();
+    const consolidatedItems = {};
 
-    // create an object
-    // that groups items by ID
-    // and counts them
-    // then map over that instead
+    cartArray.forEach(item => {
+        if (consolidatedItems[item.id]) {
+            // item exists, add to existing quantity
+            consolidatedItems[item.id].quantity += item.quantity;
+        } else {
+            // item doesn't exist, add new entry with items properties
+            consolidatedItems[item.id] = { ...item };
+        }
+    });
+
+    const itemsArray = Object.values(consolidatedItems);
 
     // temporary:
-    const cartItems = cartArray.map((item, index) => <div key={index}><img src={item.image} />{item.title} - ${item.price} - x{item.quantity}</div>);
+    const cartItems = itemsArray.map((item, index) => <div key={index}><img src={item.image} />{item.title} - ${item.price} - x{item.quantity}</div>);
 
     return (
         <div>
